Add doc outline, remove bg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       
       <div class="grid-x">
         <div class="cell nav">
+          <h1 class="hide">Navigation</h1>
             <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
                 <button class="menu-icon" type="button" data-toggle="responsive-menu"></button>
               </div>
@@ -34,6 +35,7 @@
 
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell" id="hero">
+          <h1 class="hide">Hero Section</h1>
           <h1 class="hero-title">Reach your maximum potential.</h1>
           <img class="peak-demo" src="images/peak.png" alt="Peak Technologies">
           <p class="hero-tagline">Plan and organize your workout schedule based off of capacity data.</p>
